--- a/package.json
+++ b/package.json
@@ -25,9 +25,7 @@
 
   "dependencies": {
     "hubot":         ">= 2.6.0 < 3.0.0",
-    "hubot-scripts": ">= 2.5.0 < 3.0.0",
-    "hubot-irc": "git://github.com/nandub/hubot-irc.git",
-    "cleverbot-node": "git://github.com/fojas/cleverbot-node.git"
+    "hubot-scripts": ">= 2.5.0 < 3.0.0"
   },
 
   "engines": {
